# TestUpdater

./: CMakeLists.txt  README.md  main.cpp
QSimpleUpdater/: .gitignore  CMakeLists.txt
config/: updates.json
